man kio: fix crash due to bad memory pointer on REQ_ps handling

7d11a0932af2379cd46d338c49f758bc509acec7 accidentally moved the
memory pointer increase out of the '+'-handling branch, which would
either result in bad number being read or the pointer getting behind
the end and resulting in garbage memory processing, potentially ending
in a crash.

Also changing to using dedicated own variable "sign" instead of reusing
function-global variable "j" with meaningless name.
global

Fixed-in: 21.08.3
BUG: 443983